components/quality-dashboard/backend/postgres.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgresql-dashboard
  namespace: quality-dashboard
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgresql-dashboard
  template:
    metadata:
      labels:
        app: postgresql-dashboard
    spec:
      containers:
        - name: postgresql-dashboard
          image: registry.redhat.io/rhscl/postgresql-13-rhel7:1-67
          imagePullPolicy: "IfNotPresent"
          ports:
            - containerPort: 5432
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: postgredb
      volumes:
        - name: postgredb
