components/quality-dashboard/backend/route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: quality-backend-route
  namespace: quality-dashboard
spec:
  to:
    kind: Service
    name: quality-backend-service
    weight: 100
  port:
    targetPort: 8080
  wildcardPolicy: None
